--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>My EPIC AMAZING THREE JS DEMO</title>
+      <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 
   </head>
   <body>
