--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-
   </head>
   <body>
 <!--    <div id="app"></div>-->
     <canvas id="bg"></canvas>
     <script type="module" src="main.js"></script>
+
+    <section>
+        <h1>Howdy!</h1>
+        <p>My name is Reece, a DIGIT student looking to work in game design/development. My
+            hobbies include reading, video games, and making videos. On this site, I'll post
+            some of the stuff I've made/worked on!</p>
+        <p>There'll be a lot of different stuff on here!<br />This site is made up of these pages:</p>
+        <ul>
+            <li>Nothing is here right now, as the site is still under construction! Please bear with me!</li>>
+        </ul>
+    </section>
   </body>
 </html>
